# SecureDataTransmission

./: CMakeLists.txt  README.md  autobuild.sh
client/: ClientOperation.cpp  RequestFactory.h  RespondFactory.h  SecKeyShm.cpp  SecKeyShm.h  SequenceASN1.cpp  SequenceASN1.h  ShareMemory.cpp  TcpServer.h  main.cpp
include/client/: ClientOperation.h  ClientRequestCodec.h  ClientRequestFactory.h  ClientRespondCodec.h  ClientRespondFactory.h  ClientSecKeyShm.h  Codec.h  CodecFactory.h  RespondCodec.h
include/common/: Codec.h  CodecFactory.h  TcpSocket.h
include/server/: Codec.h  ItcastLog.h  RequestFactory.h  RespondCodec.h  RespondFactory.h  SecKeyShm.h  ServerOperation.h  ServerRequestCodec.h  ServerRespondCodec.h  ServerSecKeyShm.h  db.h  seckeymodel.h
proto/: clientrequest.pb.cc  clientrequest.pb.h  clientrequest.proto  clientrespond.pb.cc  clientrespond.pb.h  clientrespond.proto  serverrequest.pb.cc  serverrequest.pb.h  serverrequest.proto  serverrespond.pb.cc  serverrespond.pb.h  serverrespond.proto
server/: BaseASN1.cpp  BaseASN1.h  CodecFactory.cpp  OCCIOP.cpp  OCCIOP.h  RequestCodec.cpp  RequestCodec.h  RequestFactory.cpp  RequestFactory.h  RespondFactory.cpp  SecKeyShm.cpp  SecKeyShm.h  ServerOperation.cpp  ServerOperation.h  ShareMemory.h  TcpSocket.cpp  TcpSocket.h  db.cpp
src/client/: CMakeLists.txt  ClientOperation.cpp  ClientRequestCodec.cpp  ClientRespondCodec.cpp  ClientSecKeyShm.cpp  ClientShareMemory.cpp  Codec.cpp  CodecFactory.cpp  ItcastLog.cpp  RequestFactory.cpp  RespondCodec.cpp  RespondFactory.cpp  TcpServer.cpp  TcpSocket.cpp  main.cpp
(+18 files in other folders)
